name:                include-graph
version:             0.1.0.0
synopsis:            Create include graphs for c and c++ projects.
description:         A useful utility for finding loops and unnecssary includes in c and c++ projects.
homepage:            github.com/daoo/include-graph
license:             BSD3
license-file:        LICENSE
author:              Daniel Oom
maintainer:          daoo314@gmail.com
copyright:           (C) 2014 Daniel Oom
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable include-graph
  main-is:             IncludeGraph.hs
  other-extensions:    OverloadedStrings
  build-depends:       base, attoparsec, bytestring, containers, posix-paths
  default-language:    Haskell2010
